--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,11 @@
 <body>
     <h1>Guia Perguntas e Respostas</h1>
     <hr>
+    <p>Meu nome é <%= nome %> </p> 
+    <p> Vamos trabalhar na linguagem <%= lang %></p>
+    <p> Inscritos: <%= inscritos %> </p>
+    <p> Inscritos: <%= nome %> </p>
+
     
 </body>
 </html>
